Next release

  Bug Fixes

    - CMFDefault.File and CMFDefault.Image: setFormat() failed to update
      the content_type property causing a stale mimetype to be used when
      serving the file or image.
      Also see http://plone.org/collector/1323

    - CMFDefault.Document and CMFDefault.Link: PUT() caused improper
      splitting of 'Contributors' metadata header.
      Also see http://plone.org/collector/3217
      
    - CMFCore.utils: Introduced contributorsplitter() utility function.

    - CMFCore.PortalFolder: checkIdAvailable() failed to catch 
      zExceptions.BadRequest.

CMF 1.4.5 (2004/07/08)

  Bug Fixes

    - When someone customises something twice, rather than raise an error,
      show them a nice message and takes them to the already customised
      object.

    - FSImage didn't recognize '.bmp' files (Collector #245).

    - Further hardening of member property, 'email', to prevent trickier
      header injection into system-generated e-mails (Collector #243 redux).

CMF 1.4.4 (2004/05/14)

  Bug Fixes

    - Unchecked member property, 'email', could allow header injection
      into system-generated e-mails (Collector #243).

CMF 1.4.3 (2004/04/22)

  Bug Fixes

    - CMFCalendar.CalendarTool: Converted '_usage' queries to dictionary
      syntax. Shuts up DeprecationWarnings in Zope 2.7.

    - CMFCore.CachingPolicyManager:  make REQUEST argument optional
      for public methods, to ease scripting policy operations from
      setup code. (Collector #234)

    - Action definitions: Removed leading spaces. (Collector #229)

CMF 1.4.3-rc1 (2004/02/05)

  Bug Fixes

    - CMFCore.PortalFolder: Explicitly declare base interfaces.

    - CMFCore.MembershipTool: Don't swallow ConflictError during wrapUser.

    - CMFDefault.SkinnedFolder: Creator() method now resembles the one from
      DublinCore. This allows for unowned objects and shuts up a deprecation
      warning in Zope 2.6.4/2.7.0.
