@@ -2,6 +2,11 @@ Next release
 
   Bug Fixes
 
+    - CMFCore.PortalFolder: _verifyObjectPaste() did not check the
+      container's allowed content types, enabling users to paste objects
+      they were not allowed to add.
+      Also see http://plone.org/collector/2183
+
     - CMFDefault.File and CMFDefault.Image: setFormat() failed to update
       the content_type property causing a stale mimetype to be used when
       serving the file or image.
